# PersonalKeyboard

./: .gitignore  README.md  main.py  pyproject.toml  test_script.py
personal_keyboard/: pk.py  shared_snippets.json
